--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -60,6 +60,6 @@
         android:id="@+id/Main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:scrollIndicators="right"></LinearLayout>
 </LinearLayout>
