--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/selectProject"
-            android:textSize="6dp"
+            android:textSize="10dp"
             android:layout_gravity="center_vertical"/>
 
         <ImageButton
@@ -48,10 +48,10 @@
             android:textSize="16dp"/>
 
         <Button
-            android:id="@+id/save"
+            android:id="@+id/go"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/save"
+            android:text="@string/go"
             android:textSize="16dp"
             android:onClick="onClick" />
     </LinearLayout>
@@ -62,4 +62,5 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:scrollIndicators="right"></LinearLayout>
+
 </LinearLayout>
