--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -62,11 +62,11 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/Main"
+            android:id="@+id/linear"
             android:orientation="vertical"
-            android:scrollIndicators="right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></LinearLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="100dp"></LinearLayout>
     </ScrollView>
 
 </LinearLayout>
