--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -61,12 +61,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/linear"
-            android:orientation="vertical"
+        <ListView
+            android:id="@+id/lvData"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="100dp"></LinearLayout>
+            android:layout_height="match_parent">
+        </ListView>
     </ScrollView>
-
 </LinearLayout>
