--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -64,7 +64,7 @@
         <ListView
             android:id="@+id/lvData"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
         </ListView>
     </ScrollView>
 </LinearLayout>
