--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -54,6 +54,6 @@
         <ListView
             android:id="@+id/lvData"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </ListView>
+            android:layout_height="wrap_content"
+            android:name="android.permission.READ_CONTACTS"/>
 </LinearLayout>
