--- a/app/src/main/res/layout/content_projects.xml
+++ b/app/src/main/res/layout/content_projects.xml
@@ -27,12 +27,14 @@
             android:id="@+id/tvProjects"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="16dp" />
     </LinearLayout>
 
     <ListView
         android:id="@+id/lvProjects"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:name="android.permission.READ_CONTACTS"/>
 
 </LinearLayout>
